load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "certs.go",
        "config.go",
        "main.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/admission-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//common:go_default_library",
        "//pkg/admission-controller/logic:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/listers/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/utils/metrics:go_default_library",
        "//pkg/utils/metrics/admission:go_default_library",
        "//pkg/utils/vpa:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/admissionregistration/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/flag:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "admission-controller",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
