load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "certs.go",
        "config.go",
        "main.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/admission-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//common:go_default_library",
        "//pkg/admission-controller/logic:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/listers/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/utils/metrics:go_default_library",
        "//pkg/utils/metrics/admission:go_default_library",
        "//pkg/utils/vpa:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/admissionregistration/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/flag:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "admission-controller",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

container_image(
    name = "image",
    base = "@debian_base_amd64//image",
    entrypoint = ["/admission-controller"],
    cmd = [
        "/admission-controller",
        "--v=4",
        "--stderrthreshold=info",
    ],
    files = [
        ":admission-controller",
    ],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push-image",
    format = "Docker",
    image = ":image",
    registry = "{STABLE_DOCKER_REGISTRY}",
    repository = "{STABLE_DOCKER_IMAGE_PREFIX}vpa-updater",
    stamp = True,
    tag = "{STABLE_DOCKER_TAG}",
)
