package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/cluster-proportional",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/cluster-proportional/control:go_default_library",
        "//pkg/cluster-proportional/control/target:go_default_library",
        "//pkg/cluster-proportional/options:go_default_library",
        "//pkg/cluster-proportional/signals:go_default_library",
        "//pkg/cluster-proportional/version:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth/gcp:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "cluster-proportional",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

container_image(
    name = "image",
    base = "@debian_base_amd64//image",
    entrypoint = ["/cluster-proportional"],
    files = [
        ":cluster-proportional",
    ],
)

container_push(
    name = "push-image",
    format = "Docker",
    image = ":image",
    registry = "{STABLE_DOCKER_REGISTRY}",
    repository = "{STABLE_DOCKER_IMAGE_PREFIX}cluster-proportional-recommender",
    stamp = True,
    tag = "{STABLE_DOCKER_TAG}",
)

#FROM k8s.gcr.io/debian-base-amd64:0.3.2
#MAINTAINER Marcin Wielgus "mwielgus@google.com"

#ADD updater updater

#CMD ./updater --v=4 --stderrthreshold=info
