load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "introspection.go",
        "policy.go",
        "state.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/cluster-proportional/control",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/cluster-proportional/control/target:go_default_library",
        "//pkg/cluster-proportional/debug:go_default_library",
        "//pkg/cluster-proportional/factors:go_default_library",
        "//pkg/cluster-proportional/factors/kubernetes:go_default_library",
        "//pkg/cluster-proportional/options:go_default_library",
        "//pkg/cluster-proportional/scaling:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)
