load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["options.go"],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/cluster-proportional/cmd/scaler/options",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
    ],
)
