load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compute.go",
        "eval_containerscalingrule.go",
        "eval_resourcescalingrule.go",
        "eval_scalingpolicy.go",
        "noop.go",
        "window.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/cluster-proportional/scaling",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/factors:go_default_library",
        "//pkg/http:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["compute_test.go"],
    embed = [":go_default_library"],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/cluster-proportional/scaling",
    deps = [
        "//pkg/apis/scalingpolicy/v1alpha1:go_default_library",
        "//pkg/debug:go_default_library",
        "//pkg/factors/static:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
    ],
)
