load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["checkpoint_writer.go"],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/recommender/checkpoint",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned/typed/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/recommender/model:go_default_library",
        "//pkg/utils/vpa:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["checkpoint_writer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/recommender/model:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
