load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cluster_feeder.go"],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/recommender/input",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/clientset/versioned/typed/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/client/listers/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/recommender/input/history:go_default_library",
        "//pkg/recommender/input/metrics:go_default_library",
        "//pkg/recommender/input/oom:go_default_library",
        "//pkg/recommender/input/spec:go_default_library",
        "//pkg/recommender/model:go_default_library",
        "//pkg/utils/vpa:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/listers/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/clientset/versioned/typed/metrics/v1beta1:go_default_library",
    ],
)
