load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "pod_eviction_admission.go",
        "update_priority_calculator.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/updater/priority",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/utils/vpa:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["update_priority_calculator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/utils/test:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
