load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset.go",
        "doc.go",
    ],
    importpath = "k8s.io/autoscaler/vertical-pod-autoscaler/pkg/client/clientset/versioned",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/clientset/versioned/typed/autoscaling.k8s.io/v1beta1:go_default_library",
        "//pkg/client/clientset/versioned/typed/poc.autoscaling.k8s.io/v1alpha1:go_default_library",
        "//vendor/k8s.io/client-go/discovery:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/util/flowcontrol:go_default_library",
    ],
)
